<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_help"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grabble.grabble.HelpActivity"
    android:background="#49412c">

    <TextView
        android:text="@string/txtHelpHeader"
        android:layout_width="328dp"
        android:layout_height="59dp"
        android:id="@+id/txtHelpHeader"
        style="@style/header_text"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <TextView
        android:text="@string/txtHelpInfo"
        android:layout_width="330dp"
        android:layout_height="365dp"
        android:id="@+id/txtHelpMainInfo"
        style="@style/switch_text"
        android:textSize="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/txtHelpHeader"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:text="@string/txtCopyright"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtCopyright"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp" />

</android.support.constraint.ConstraintLayout>
