<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grabble.grabble.MainActivity"
    android:background="@drawable/gradient">


    <Button
        android:text="@string/btnMaps"
        android:id="@+id/btnMaps"
        android:onClick="openMaps"
        android:background="@drawable/brown_button"
        android:elevation="1dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        style="@style/button_text"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@+id/grabbleLogo" />


    <Button
        android:text="@string/btnLetterbox"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/btnLetterbox"
        android:background="@drawable/brown_button"
        android:onClick="openLetterbox"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/btnMaps"
        app:layout_constraintBottom_toTopOf="@+id/btnStats"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        style="@style/button_text"/>


    <Button
        android:text="@string/btnStats"
        android:layout_width="250dp"
        android:layout_height="60dp"
        android:id="@+id/btnStats"
        android:background="@drawable/brown_button"
        android:onClick="openStats"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="152dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        style="@style/button_text"/>

    <ImageView
        android:layout_width="344dp"
        android:layout_height="157dp"
        app:srcCompat="@drawable/grabble_logo"
        android:id="@+id/grabbleLogo"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        android:clickable="false" />

    <ImageButton
        android:layout_width="50dp"
        android:onClick="openHelp"
        android:id="@+id/imgBtnHelp"
        android:background="@drawable/help"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp" />

    <ImageButton
        android:layout_width="50dp"
        android:background="@drawable/settings"
        android:id="@+id/imgBtnSettings"
        android:onClick="openSettings"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="16dp" />

</android.support.constraint.ConstraintLayout>
